feature :: add basic GPIO support (#2)
* add support for the ariane soc based genesys2 board

includes a super simple test to verify printk, and a basic kernel launch
of our "app".

* revert sample app to default

* bugfix :: correct mtime register offsets

* bugfix :: correct the clock-frequency for uart0

* Modified ariane.dtsi file to add the xlnx_gpio0 support. This
required a small change in yaml binding file to make a property
optional. Also, cleaned the pinmux file so that it can be filled
appropriately.

	modified:   boards/riscv/genesys2/genesys2.dts
	modified:   boards/riscv/genesys2/pinmux.c
	modified:   dts/bindings/gpio/xlnx,xlnx,xps-gpio-1.00.a.yaml
	modified:   dts/riscv/rv64_ariane.dtsi

Co-authored-by: akif <akif@recogni.com>
Co-authored-by: Akif Saglam <36579730+akifsaglam@users.noreply.github.com>

--- a/dts/riscv/rv64_ariane.dtsi
+++ b/dts/riscv/rv64_ariane.dtsi
@@ -96,6 +96,21 @@
             interrupt-parent = <&PLIC0>;
             reg-names = "control";
         };
+        xlnx_gpio0: gpio@40000000 {
+            #gpio-cells = <2>;
+            compatible = "xlnx,xps-gpio-1.00.a";
+            gpio-controller ;
+            reg = <0x0 0x40000000 0x0 0x10000 >;
+            xlnx,all-inputs = <0x0>;
+            xlnx,all-inputs-2 = <0x0>;
+            xlnx,dout-default = <0x0>;
+            xlnx,dout-default-2 = <0x0>;
+            xlnx,gpio-width = <0x8>;
+            xlnx,gpio2-width = <0x8>;
+            xlnx,is-dual = <0x1>;
+            xlnx,tri-default = <0xffffffff>;
+            xlnx,tri-default-2 = <0xffffffff>;
+        };
     }; //SOC
     
 }; //main
