--- a/dts/bindings/gpio/xlnx,xlnx,xps-gpio-1.00.a.yaml
+++ b/dts/bindings/gpio/xlnx,xlnx,xps-gpio-1.00.a.yaml
@@ -14,7 +14,7 @@ properties:
       required: true
 
     label:
-      required: true
+      required: false
 
     xlnx,all-inputs:
       type: int
