Add FATFS Ramdisk to Genesys board (#11)

--- a/boards/riscv/genesys2/genesys2_defconfig
+++ b/boards/riscv/genesys2/genesys2_defconfig
@@ -17,5 +17,18 @@ CONFIG_RISCV_MACHINE_TIMER=y
 CONFIG_SRAM_SIZE=65536
 CONFIG_SRAM_BASE_ADDRESS=0x80060000
 
+# Compile for debugging
+CONFIG_DEBUG=y
+
+#Enable stats gathering
 CONFIG_STATS=y
 CONFIG_STATS_NAMES=y
+
+#Enable Filesystems
+CONFIG_DISK_ACCESS=y
+CONFIG_FILE_SYSTEM=y
+
+# Ramdisk size (in Kbytes)
+CONFIG_DISK_ACCESS_RAM=y
+CONFIG_DISK_RAM_VOLUME_SIZE=512   
+
