Snapshot of all changes

--- a/boards/riscv/genesys2/genesys2_defconfig
+++ b/boards/riscv/genesys2/genesys2_defconfig
@@ -47,6 +47,13 @@ CONFIG_NET_CONFIG_SETTINGS=y
 CONFIG_NET_CONFIG_NEED_IPV4=y
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.168.1.78"
 CONFIG_NET_STATISTICS=y
+CONFIG_NET_PROMISCUOUS_MODE=y
+
+#Try adding this
+CONFIG_NET_IF_MCAST_IPV4_ADDR_COUNT=3
+
+# IEEE 802.1AS-2011 generalized Precision Time Protocol (gPTP)
+#CONFIG_NET_GPTP=y
 
 CONFIG_NEWLIB_LIBC=y
 
