--- a/samples/net/gptp/prj.conf
+++ b/samples/net/gptp/prj.conf
@@ -1,6 +1,13 @@
+# Compile for debugging
+CONFIG_DEBUG=y
+CONFIG_DEBUG_OPTIMIZATIONS=y
+
 CONFIG_NETWORKING=y
 CONFIG_NET_LOG=y
 CONFIG_LOG=y
+
+CONFIG_LOG_DEFAULT_LEVEL=3
+
 CONFIG_NET_IPV6=y
 CONFIG_NET_IPV4=y
 CONFIG_NET_DHCPV4=n
@@ -17,6 +24,7 @@ CONFIG_NET_BUF_RX_COUNT=32
 CONFIG_NET_BUF_TX_COUNT=32
 CONFIG_NET_IF_UNICAST_IPV6_ADDR_COUNT=5
 CONFIG_NET_IF_MCAST_IPV6_ADDR_COUNT=5
+
 CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=1
 CONFIG_NET_MAX_CONTEXTS=10
 
@@ -27,7 +35,7 @@ CONFIG_NET_SHELL=y
 # Ethernet is needed for gPTP
 CONFIG_NET_L2_ETHERNET=y
 
-CONFIG_NET_CONFIG_NEED_IPV6=y
+#CONFIG_NET_CONFIG_NEED_IPV6=y   IPV6 gives a network err after 90 seconds....punt.
 CONFIG_NET_CONFIG_NEED_IPV4=y
 CONFIG_NET_CONFIG_SETTINGS=y
 
@@ -36,15 +44,15 @@ CONFIG_NET_CONFIG_SETTINGS=y
 # network interfaces.
 
 # First ethernet interface will use these settings
-CONFIG_NET_CONFIG_MY_IPV6_ADDR="2001:db8::1"
-CONFIG_NET_CONFIG_PEER_IPV6_ADDR="2001:db8::2"
-CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
-CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
+#CONFIG_NET_CONFIG_MY_IPV6_ADDR="2001:db8::1"
+#CONFIG_NET_CONFIG_PEER_IPV6_ADDR="2001:db8::2"
+CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.168.1.61"
+CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.168.1.62"
 
 # gPTP settings
 CONFIG_NET_GPTP=y
 CONFIG_NET_GPTP_STATISTICS=y
-CONFIG_NET_GPTP_GM_CAPABLE=y
+CONFIG_NET_GPTP_GM_CAPABLE=n
 
 # How many traffic classes to enable
 CONFIG_NET_TC_TX_COUNT=6
