Add PTP clock driver and various debugging hacks

--- a/samples/net/gptp/prj.conf
+++ b/samples/net/gptp/prj.conf
@@ -7,6 +7,9 @@ CONFIG_NET_LOG=y
 CONFIG_LOG=y
 
 CONFIG_LOG_DEFAULT_LEVEL=3
+CONFIG_NET_GPTP_LOG_LEVEL_DBG=y
+CONFIG_NET_GPTP_LOG_LEVEL_ERR=y
+#CONFIG_NET_GPTP_LOG_LEVEL_WARNING=y
 
 CONFIG_NET_IPV6=y
 CONFIG_NET_IPV4=y
@@ -53,6 +56,8 @@ CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.168.1.62"
 CONFIG_NET_GPTP=y
 CONFIG_NET_GPTP_STATISTICS=y
 CONFIG_NET_GPTP_GM_CAPABLE=n
+#Trying this...
+CONFIG_NET_GPTP_CLOCK_ACCURACY_100MS=y
 
 # How many traffic classes to enable
 CONFIG_NET_TC_TX_COUNT=6
