--- a/boards/riscv/genesys2/genesys2_defconfig
+++ b/boards/riscv/genesys2/genesys2_defconfig
@@ -52,6 +52,9 @@ CONFIG_NET_PROMISCUOUS_MODE=y
 #Try adding this
 CONFIG_NET_IF_MCAST_IPV4_ADDR_COUNT=3
 
+#Enable Clock update!
+CONFIG_NET_GPTP_USE_DEFAULT_CLOCK_UPDATE=y
+
 # IEEE 802.1AS-2011 generalized Precision Time Protocol (gPTP)
 #CONFIG_NET_GPTP=y
 
