Fix syslog bugs Ported over these commits from mainline to fix syslog 64 bit & RISC-V issues: cda619996e3e0e710bdb dc4e331e45cb1dc70b1
On host linux machine:
Uncomment these lines in /etc/rsyslog.conf:
   module(load="imudp")
   input(type="imudp" port="514")
$ sudo systemctl restart rsyslog
$ tail -f /var/log/syslog

Make sure IP addresses in prj.conf are correct, then...
$ rm -rf build/
$ west build -b genesys2 samples/net/syslog_net/

When app runs, messages should appear in var/log/syslog on remote
machine.

--- a/samples/net/syslog_net/prj.conf
+++ b/samples/net/syslog_net/prj.conf
@@ -30,12 +30,17 @@ CONFIG_NET_CONFIG_NEED_IPV6=y
 CONFIG_NET_CONFIG_NEED_IPV4=y
 CONFIG_NET_CONFIG_MY_IPV6_ADDR="2001:db8::1"
 CONFIG_NET_CONFIG_PEER_IPV6_ADDR="2001:db8::2"
-CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
-CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
+CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.168.1.22"
+CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.168.1.12"
 
 # logging net backend config
 CONFIG_LOG_BACKEND_NET=y
-CONFIG_LOG_BACKEND_NET_SERVER="[2001:db8::2]:514"
+CONFIG_LOG_BACKEND_NET_SERVER="192.168.1.12:514"
 
 # Get newlib by default as it has proper time function support
 CONFIG_NEWLIB_LIBC=y
+
+# Fix 'net_config: IPv4 address: <log_strdup alloc failed> ' errors:
+CONFIG_LOG_STRDUP_BUF_COUNT=2
+CONFIG_LOG_STRDUP_MAX_STRING=512
+
