Zephyr now updates system time from 802.1as stream.
Update system time on sync packets.
Not using timestamping hw on eth chip.
Forcing the systime update manually for now until clock driver is ready.
Add Date shell which adds date command to menu.
TODO: cleanup & add to scorpio app.

Tested with Avnu gptp server:
git clone https://github.com/Avnu/gptp
cd gptp
mkdir build; cd build
cmake ..
make
cd ..
sudo ./build/gptp ens1 -V -GM -F gptp_cfg.ini

--- a/boards/riscv/genesys2/genesys2_defconfig
+++ b/boards/riscv/genesys2/genesys2_defconfig
@@ -56,7 +56,9 @@ CONFIG_NET_IF_MCAST_IPV4_ADDR_COUNT=3
 CONFIG_NET_GPTP_USE_DEFAULT_CLOCK_UPDATE=y
 
 # IEEE 802.1AS-2011 generalized Precision Time Protocol (gPTP)
-#CONFIG_NET_GPTP=y
+CONFIG_NET_GPTP=y
+#CONFIG_NET_GPTP_STATISTICS=y
+CONFIG_NET_GPTP_GM_CAPABLE=n
 
 CONFIG_NEWLIB_LIBC=y
 
@@ -66,4 +68,3 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 
 #Logging thread sometimes gets hung up wthout this
 CONFIG_LOG_IMMEDIATE=y
-
