--- a/samples/net/gptp/prj.conf
+++ b/samples/net/gptp/prj.conf
@@ -35,6 +35,9 @@ CONFIG_INIT_STACKS=y
 CONFIG_PRINTK=y
 CONFIG_NET_SHELL=y
 
+CONFIG_POSIX_CLOCK=y
+CONFIG_DATE_SHELL=y
+
 # Ethernet is needed for gPTP
 CONFIG_NET_L2_ETHERNET=y
 
