--- a/samples/net/gptp/prj.conf
+++ b/samples/net/gptp/prj.conf
@@ -44,7 +44,7 @@ CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.168.1.62"
 # gPTP settings
 CONFIG_NET_GPTP=y
 CONFIG_NET_GPTP_STATISTICS=y
-#CONFIG_NET_GPTP_GM_CAPABLE=y
+CONFIG_NET_GPTP_GM_CAPABLE=n
 
 # How many traffic classes to enable
 CONFIG_NET_TC_TX_COUNT=6
