--- a/drivers/pcie/host/Kconfig
+++ b/drivers/pcie/host/Kconfig
@@ -42,7 +42,7 @@ endif # PCIE_MSI
 
 config PCIE_SHELL
 	bool "Enable PCIe/new PCI Shell"
-	default y
+	default n
 	depends on SHELL
 	help
 	  Enable commands for debugging PCI(e) using the built-in shell.
