--- a/west.yml
+++ b/west.yml
@@ -35,7 +35,7 @@ manifest:
     - name: zephyr-modules-overlay
       remote: recogni
       path: modules/zephyr-modules-overlay
-      revision: master
+      revision: example/dev/feature-ci
 
   self:
     path: zephyr
