--- a/west.yml
+++ b/west.yml
@@ -29,6 +29,8 @@ manifest:
   projects:
     - name: fatfs
       path: modules/fs/fatfs
+    - name: littlefs
+      path: modules/fs/littlefs
     - name: mbedtls
       revision: 53044168b43f06ec5654b906a2cdd260bf477edd
       path: modules/crypto/mbedtls
