--- a/west.yml
+++ b/west.yml
@@ -30,7 +30,8 @@ manifest:
     - name: fatfs
       path: modules/fs/fatfs
     - name: littlefs
-      revision: 6372f515fe59616bd7e00ca7bcce762c05ab029b
+#      revision: 6372f515fe59616bd7e00ca7bcce762c05ab029b
+      revision: 9e4498d1c73009acd84bb36036ee5e2869112a6c
       path: modules/fs/littlefs
     - name: mbedtls
       revision: 53044168b43f06ec5654b906a2cdd260bf477edd
